# spatial

./: .pre-commit-config.yaml  AUTHORS.rst  CONTRIBUTING.rst  Cargo.toml  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
rust/: Cargo.toml
rust/src/: lib.rs
spatial/: __init__.py  __init__.pyi  discrete.py  space.py
src/: lib.rs
src/spatial/: discrete.py  space.py
tests/: test_discrete.py
