[build-system]
requires = ["maturin==1.3.0"]
build-backend = "maturin"

[project]
name = "spatial"
authors = [
    {name = "Fabrice Normandin", email = "normandf@mila.quebec"},
]
description = "My package description"
readme = "README.rst"
requires-python = ">=3.9"
keywords = ["one", "two"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.8"',
]
dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["spatial*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["spatial.tests*"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)