[package]
authors = ["Fabrice Normandin <normandf@mila.quebec>"]
name = "spatial_lib"
version = "0.0.1"
description = "Having fun with spaces"
readme = "../README.rst"
edition = "2018"

# [package.metadata.maturin.scripts]

[package.metadata.maturin]
# requires-dist = []
# requires-python = ">=3.12"
# classifier = [
#     'Development Status :: 2 - Pre-Alpha',
#     'Intended Audience :: Developers',
#     'License :: OSI Approved :: MIT License',
#     'Natural Language :: English',
#     'Programming Language :: Python :: 3.6',
#     'Programming Language :: Python :: 3.7',
#     'Programming Language :: Python :: 3.8',
# ]

[dependencies]
pyo3 = { git = "https://github.com/PyO3/pyo3", features = ["extension-module"] }
rand = "0.8.5"

[lib]
name = "spatial_lib"
crate-type = ["cdylib"]
